# UCN-EDatos-2022-2

./: .gitignore  README.md
exercises/: README.md
workshop/: README.md
workshop/readcsv/: README.md
workshop/readcsv01/: CMakeLists.txt  README.md  main.cpp  read_csv
workshop/readcsv01/data/: datos.csv
